--- a/notes/1984.html
+++ b/notes/1984.html
@@ -46,6 +46,7 @@
 <p>&ldquo;Everything can be taken from a man but one thing: the last of the human freedoms&mdash;to choose one&rsquo;s attitude in any given set of circumstances, to choose one&rsquo;s own way.&rdquo;―&nbsp;<strong>Viktor E. Frankl,&nbsp;Man's Search for Meaning</strong></p>
 </blockquote>
 <p>The end of George Orwell's 1984 is a sad and thought-provoking ending to the book's message about totalitarianism, rebellion, and the illusion of reality. I was rooting for Winston up until the end, hoping he could hold on to his hate for big brother.</p>
+<p>Orwell crafted a work that is both a reflection of its time and an enduring commentary on the human condition. It’s a masterpiece of literature.</p>  
 <h2>Similarities with Cuba</h2>
 <p>As a Cuban-American, I found myself comparing Winston&rsquo;s experience to my family&rsquo;s. Before the internet came to Cuba, the island was totally closed off. Unless you worked in the heart of the capital, you wouldn&rsquo;t come into contact with tourists. They weren&rsquo;t even allowed to stay in the residential parts of the country. There was no cell phone access and very few people could afford a telephone or make an international call.</p>
 <p>I think the book is right in saying that when you&rsquo;re closed off from the outside world and unable to compare your living situation with others, it&rsquo;s hard to feel oppressed. I've seen it firsthand.</p>
