--- a/notes.html
+++ b/notes.html
@@ -50,7 +50,7 @@
 
 <p style="margin: 0;">
       
-        <a style="font-weight: 500;" href="/notes/the-stranger">NOTES The Absurdity of Life: A Review of Camus' The Stranger</a>
+        <a style="font-weight: 500;" href="/notes/the-stranger">The Absurdity of Life: A Review of Camus' The Stranger</a>
         
     </p>	      
     <p>
