--- a/notes/hhgtg.html
+++ b/notes/hhgtg.html
@@ -38,7 +38,7 @@
     Notes
   </small>
   <h1 class="title">
-    The Hitchhiker's Guide to the Galaxy Book Review: "Space Travel Meets Alice in Wonderland"
+    A Space Odyssey with a Sense of Humor: A Review of The Hitchhiker's Guide to the Galaxy
   </h1>
 </div>
 <article style="margin-top: 30px;">
