--- a/notes/1984.html
+++ b/notes/1984.html
@@ -38,7 +38,7 @@
     Notes
   </small>
   <h1 class="title">
-    1984 Book Review: "I Love Big Brother"
+    The Downfall of Winston Smith: A Review of Orwell's 1984
   </h1>
 </div>
 <article style="margin-top: 30px;">
