--- a/notes.html
+++ b/notes.html
@@ -50,7 +50,7 @@
 
 <p style="margin: 0;">
       
-        <a style="font-weight: 500;" href="/notes/the-alchemist">Rediscovering my Personal Legend: A Review of Paolo Coelho's The Alchemist</a>
+        <a style="font-weight: 500;" href="/notes/the-alchemist">Rediscovering my Personal Legend: A Review of Coelho's The Alchemist</a>
         
     </p>	      
     <p>
