--- a/notes/the-alchemist.html
+++ b/notes/the-alchemist.html
@@ -56,31 +56,15 @@
 <p>This book came back into my life at the exact right time. It&rsquo;s reconnected me with the passion for live I felt in my 20s and I once again feel driven to pursue my personal legend, this time while balancing the responsibilities to my family.</p>
 <p>I guess it&rsquo;s true what the author says in the book: &ldquo;When you want something, all the universe conspires in helping you to achieve it.&rdquo; This past year, I worked really hard to get myself back on track physically and mentally. Perhaps reading this book was the universe&rsquo;s way of throwing me a bone and giving me the inspiration I needed to get me through that last little bump.</p>
 <p>And so, as I reflect upon the book, I&rsquo;m reminded to reach for the stars and never give up on my dream. If you find yourself feeling as lost as I did after the pandemic, I hope you rediscover the love, joy, and peace within so that when you look back on your life, you can do so with pride knowing that you weathered to storms, as Santiago did, and emerged strong and wiser for it.</p>
-<p>I&rsquo;ll leave you with this poem I was inspired to write (don't laugh at me lol):</p>
-<blockquote>
-<p><em>So let the journey continue, for the road ahead is long and winding</em></p>
-</blockquote>
-<blockquote>
-<p><em>With the wind at our backs and the fire in our hearts, let us march on</em></p>
-</blockquote>
-<blockquote>
-<p><em>For the true treasure lies not in the destination, but in the journey itself</em></p>
-</blockquote>
-<blockquote>
-<p><em>With each step, we forge new paths and uncover hidden riches within</em></p>
-</blockquote>
-<blockquote>
-<p><em>With each breath, we grow stronger and wiser, our spirits lifted higher</em></p>
-</blockquote>
-<blockquote>
-<p><em>For life is a grand adventure, a never-ending quest for truth and beauty</em></p>
-</blockquote>
-<blockquote>
-<p><em>So let us sing with the birds, dance with the stars, and bask in the sun</em></p>
-</blockquote>
-<blockquote>
-<p><em>For the journey is ours, and the journey is glorious</em></p>
-</blockquote>
+<p>I&rsquo;ll leave you with this poem I was inspired to write (don't laugh at me lol):</p>  
+<p style="padding-left: 30px;"><em>So let the journey continue, for the road ahead is long and winding</em></p>
+<p style="padding-left: 30px;"><em>With the wind at our backs and the fire in our hearts, let us march on</em></p>
+<p style="padding-left: 30px;"><em>For the true treasure lies not in the destination, but in the journey itself</em></p>
+<p style="padding-left: 30px;"><em>With each step, we forge new paths and uncover hidden riches within</em></p>
+<p style="padding-left: 30px;"><em>With each breath, we grow stronger and wiser, our spirits lifted higher</em></p>
+<p style="padding-left: 30px;"><em>For life is a grand adventure, a never-ending quest for truth and beauty</em></p>
+<p style="padding-left: 30px;"><em>So let us sing with the birds, dance with the stars, and bask in the sun</em></p>
+<p style="padding-left: 30px;"><em>For the journey is ours, and the journey is glorious</em></p>
   
  </article>
 
