--- a/notes/brave-new-world.html
+++ b/notes/brave-new-world.html
@@ -38,7 +38,7 @@
     Notes
   </small>
   <h1 class="title">
-    Like a Gentle Breeze: A Brave New World
+A Brave New World: A Dystopian Vision of Utopia
   </h1>
 </div>
 <article style="margin-top: 30px;">
