--- a/notes/hhgtg.html
+++ b/notes/hhgtg.html
@@ -38,7 +38,7 @@
     Notes
   </small>
   <h1 class="title">
-    A Space Odyssey with a Sense of Humor: A Review of The Hitchhiker's Guide to the Galaxy
+The Hitchhiker's Guide to the Galaxy: A Satirical Spin on Sci-Fi
   </h1>
 </div>
 <article style="margin-top: 30px;">
