--- a/notes.html
+++ b/notes.html
@@ -95,7 +95,7 @@
 <p>	      
 <p style="margin: 0;">
       
-        <a style="font-weight: 500;" href="/notes/1984">The Downfall of Winston Smith: A Review of Orwell's 1984</a>
+        <a style="font-weight: 500;" href="/notes/1984">1984: A Totalitarian Approach to Breaking the Human Spirit</a>
         
     </p>
     <p>
