--- a/notes/the-stranger.html
+++ b/notes/the-stranger.html
@@ -38,7 +38,7 @@
     Notes
   </small>
   <h1 class="title">
-    The Absurdity of Life: A Review of Camus' The Stranger
+The Stranger: Challenging the Absurdity of Life
   </h1>
 </div>
 <article style="margin-top: 30px;">
