--- a/notes/1984.html
+++ b/notes/1984.html
@@ -38,54 +38,114 @@
     Notes
   </small>
   <h1 class="title">
-1984: A Totalitarian Approach to Breaking the Human Spirit
+Book Review: 1984 by George Orwell
+      <div class="container">
+    <small class="grid eight description">
+      A Totalitarian Approach to Breaking the Human Spirit
+    </small>
+  </div>
   </h1>
 </div>
 <article style="margin-top: 30px;">
 <blockquote>
 <p>&ldquo;Everything can be taken from a man but one thing: the last of the human freedoms&mdash;to choose one&rsquo;s attitude in any given set of circumstances, to choose one&rsquo;s own way.&rdquo;―&nbsp;<strong>Viktor E. Frankl,&nbsp;Man's Search for Meaning</strong></p>
 </blockquote>
-<p>The end of George Orwell's 1984 is a sad and thought-provoking ending to the book's message about totalitarianism, rebellion, and the illusion of reality. I was rooting for Winston up until the end, hoping he could hold on to his hate for big brother.</p>
-<p>Orwell crafted a work that is both a reflection of its time and an enduring commentary on the human condition. It’s a masterpiece of literature.</p>  
-<h2>Not hope, not love, not even the human spirit</h2>
-<p>In the final pages, we see Winston&rsquo;s tragic downfall as he becomes one of the proles. He always believed that salvation lay with the proles, but in the end it becomes clear that there is no hope among them either.</p>
-<p>Perhaps the most heart-wrenching aspect of Winston's downfall is the betrayal of his love for Julia. Their relationship had been a glimmer of hope throughout the novel, a bit of humanity amidst the bleakness of totalitarian rule. But in the end, even their love is not enough to defeat the Party. He finally understands the song that he had heard at the Chestnut Tree Caf&eacute;, "Under the spreading chestnut tree, I sold you and you sold me.&rdquo;</p>
-<p>Orwell's message is clear and profound: nothing, not hope, not love, not even the human spirit, can win the war against a totalitarian government. In the face of unchecked power, even the purest human emotions can be subverted and corrupted.</p>
-<p>In the US, I think we take freedom for granted. This book is a cautionary tale that reminds us to be always be vigilant in safeguarding our freedom, for it is a fragile and precious thing that can be easily lost.</p>
-<h2>Similarities with Cuba</h2>
-<p>As a Cuban-American, I found myself comparing Winston&rsquo;s experience to my family&rsquo;s. Before the internet came to Cuba, the island was totally closed off. Unless you worked in the heart of the capital, you wouldn&rsquo;t come into contact with tourists. They weren&rsquo;t even allowed to stay in the residential parts of the country. There was no cell phone access and very few people could afford a telephone or make an international call.</p>
-<p>I think the book is right in saying that when you&rsquo;re closed off from the outside world and unable to compare your living situation with others, it&rsquo;s hard to feel oppressed. I've seen it firsthand.</p>
-<p>Doesn&rsquo;t everyone have it this bad? Maybe worse?</p>
-<p>Another similarity between Cuba and 1984 was the animosity they encouraged between citizens and the brainwashing. In Cuba, you were encouraged to watch your neighbors and family and inform the government whenever you witnessed someone breaking the rules. My uncle, who has long since passed away, had a hard time in Cuba because he was a gay man. A neighbor informed the party that he was homosexual and he was rounded up and incarcerated in a labor camp to &ldquo;turn him&rdquo; heterosexual.</p>
-<p>It&rsquo;s wild to think about how all of this closely resembles the thought police and joycamps.</p>  
-<h2>Insights from the book</h2>
+<p dir="ltr"><span>"1984" by George Orwell is a haunting, brilliantly crafted dystopian novel that takes readers on a chilling journey into the depths of a totalitarian society, where an omnipresent government exercises absolute control over every aspect of its citizens' lives.&nbsp;</span></p>
+<p dir="ltr"><span>Through its narrative, Orwell masterfully explores the consequences of unchecked power, the perversion of language, and the erosion of individual freedom, leaving readers with a profound and unsettling vision of a world devoid of privacy, truth, and humanity. The book&rsquo;s timeless themes still resonate even 74 years after it was first written.</span></p>
+<h2 dir="ltr"><span>Characters</span></h2>
+<ul>
+<li dir="ltr">
+<p dir="ltr"><span>Winston Smith:</span><span> The protagonist, Winston is a low-ranking member of the ruling Party in London and works at the Ministry of Truth. He is tormented by the oppressive regime and secretly dreams of rebelling against Big Brother. Winston is an everyman character, representing the struggle for individuality and freedom in a world of total control.</span></p>
+</li>
+</ul>
+<p><span><span>&nbsp;</span></span></p>
+<ul>
+<li dir="ltr">
+<p dir="ltr"><span>Julia:</span><span> A young, rebellious Party member who becomes Winston's significant other. She shares his hatred for the Party and desire for personal freedom. Her character demonstrates the importance of emotional connections and the human spirit in the face of an oppressive regime.</span></p>
+</li>
+</ul>
+<ul>
+<li dir="ltr">
+<p dir="ltr"><span>O'Brien:</span><span> A mysterious and powerful Party member who Winston initially believes to be part of the underground resistance against the Party. O'Brien ultimately proves to be a loyal Party member, playing a crucial role in Winston's downfall.</span></p>
+</li>
+</ul>
+<ul>
+<li dir="ltr">
+<p dir="ltr"><span>Big Brother:</span><span> The enigmatic and all-seeing leader of the Party, Big Brother is both a symbol of the totalitarian regime and a representation of the omnipresent surveillance state. I don&rsquo;t think he&rsquo;s even alive anymore (and who knows if he even existed).</span></p>
+</li>
+</ul>
+<ul>
+<li dir="ltr">
+<p dir="ltr"><span>Mr. Charrington:</span><span> The seemingly kind owner of the antique shop where Winston rents a room for his secret meetings with Julia. He later reveals himself to be a member of the Thought Police, contributing to Winston's capture and ultimate betrayal.</span></p>
+</li>
+</ul>
+<h2 dir="ltr"><span>Key Takeaways:</span></h2>
+<ul>
+<li dir="ltr">
+<p dir="ltr"><span>Those who have a why, can bear with almost any how.</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>True power is not in strength or money, but in the ability to control ideas.</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>The human desire for freedom is inherent and unbreakable.</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>Language has the power to shape and manipulate reality.</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>If everyone believes something is true, then it&rsquo;s true.</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>Who controls the past controls the future. Who controls the present controls the past.</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>For the great bulk of mankind, happiness is better than freedom.</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>Knowledge is power, but it&rsquo;s dangerous to believe when information is controlled.</span></p>
+</li>
+</ul>
+<h2 dir="ltr"><span>Personal Reflection:</span></h2>
+<p dir="ltr"><span>The end of "1984" left me feeling a mixture of sadness and contemplation. I found myself rooting for Winston until the very end, hoping that he could hold on to his hate for Big Brother. The novel is a commentary on the human condition, serving as a cautionary tale that reminds us to be vigilant in safeguarding our freedom.&nbsp;</span></p>
+<p dir="ltr"><span>One of the most heart-wrenching aspects of the story was the betrayal of Winston's love for Julia. Their relationship had been a glimmer of hope throughout the novel, a bit of humanity amidst the bleakness of totalitarian rule. But in the end, even their love is not enough to defeat the Party.</span></p>
+<p dir="ltr"><span>The book is largely a product of its time, reflecting the political and social climate of the mid-20th century. The novel was written in the aftermath of World War II, during the early years of the Cold War, when the ideological struggle between communism and capitalism was at its height. Many dystopian novels of that era explore themes of totalitarianism, often drawing parallels to communism or socialism.</span></p>
+<p dir="ltr"><span>Orwell's portrayal of an oppressive regime in "1984" can be seen as a cautionary tale against the dangers of communism. As a Cuban-American, I couldn't help but draw parallels between Winston's experience and that of my own family in Cuba, particularly in terms of isolation, animosity between citizens, and brainwashing. In both situations, people were encouraged to watch their neighbors and family members, and inform the government of any rule-breaking. I was struck by how closely this reality resembled the thought police and joycamps in the novel.</span></p>
+<p dir="ltr"><span>In the US, I think we often take freedom for granted. "1984" serves as a stark reminder to always be vigilant in protecting our freedom, as it is a fragile and precious thing that can be easily lost. Reading this novel has made me more aware of the importance of standing up for our rights and liberties, and I hope others will feel the same way after reading it.</span></p>
+<h2 dir="ltr"><span>Recommendation:</span></h2>
+<p dir="ltr"><span>I highly recommend "1984". It&rsquo;s a classic that leaves you thinking about what it means to be free and to have free will. Reading "1984" will leave you with a renewed appreciation for the freedom we enjoy and a sense of responsibility to preserve it for future generations.</span></p>
+<h2 dir="ltr"><span>Unanswered Questions:</span></h2>
+<p dir="ltr"><span>While "1984" ties up many loose ends, it also leaves many questions unanswered, which add to the novel's sense of mystery and intrigue.</span></p>
 <ol>
-<li>Those who have a why to live, can bear with almost any how.</li>
-<li>True power is not in strength or money, but in the ability to control ideas.</li>
-<li>The human desire for freedom is inherent and unbreakable.</li>
-<li>Language has the power to shape and manipulate reality.</li>
-<li>If everyone believes something is true, does that make it true?</li>
-<li>Who controls the past controls the future. Who controls the present controls the past.</li>
-<li>For the great bulk of mankind, happiness is better than freedom.</li>
-<li>Knowledge is power, but it can also be a dangerous thing. Both to know it and be controlled by it. In a society where information is controlled, education can be a means of control.</li>
-</ol>
-<h2>So many unanswered questions</h2>
-<p>While the ending closed the loop on a lot of open threads, I left with so many unanswered questions. Here are some of my top questions:</p>
+<li dir="ltr">
+<p dir="ltr"><span>Did O'Brien actually co-author "The Book," or was that just another example of the Party taking credit for others' work?</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>How long had the Thought Police been aware of Winston's rebellious thoughts and actions?</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>Was there any hope for the proles to rise against the Party, or were they as doomed as Winston and Julia?</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>Why did it seem like O'Brien could read Winston's mind, and what was the nature of their connection?</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>Was Julia truly tortured and brainwashed in the end, or was she part of the Thought Police all along? I know they make it seem like she was definitely tortured in the end and possibly had a lobotomy, but there were so many suspicious things about her:</span></p>
+</li>
 <ol>
-<li>Did O&rsquo;Brien actually co-author &ldquo;The Book&rdquo; or was that just another example of the Party taking credit for others&rsquo; work?</li>
-<li>Did they bait him with that photograph of the three prisoners or was its inclusion a mistake?</li>
-<li>If Winston purchased the journal from someone in the thought police, they knew he had the journal all along. So how long had they been reading his journal?</li>
-<li>Was Julia actually in the thought police? I know they make it seem like she was definitely tortured in the end and possibly had a lobotomy, but there were so many suspicious things about her:<ol>
-<li>She knew so much about Winston from the beginning (e.g. his name, the perfume her mom used, the chocolate).</li>
-<li>She asked him to read The Book aloud instead of reading it with him. It&rsquo;s as if she wanted him to be heard by the tv.</li>
-<li>Speaking of tv, it&rsquo;s suspicious that she actually pointed out the picture frame that was hiding the telescreen. &ldquo;I bet that picture&rsquo;s got bugs behind it.&rdquo;</li>
-<li>O&rsquo;Brien claimed Julia betrayed him almost immediately. But when he talks to her at the end of the book she mentions going to Room 101. Weren&rsquo;t there 3 stages involved in reprogramming and torture was the last one?</li>
-</ol></li>
-<li>Why did it seem like O&rsquo;Brien could read Winston&rsquo;s mind? It seems like from the very beginning Winston was receiving messages from O&rsquo;Brien in his dreams. I admit I wondered several times if O&rsquo;Brien ever existed or if we were witnessing some Fight Club-esque type things with two sides of Winston fighting each other.</li>
-<li>If the party members were suppose to be the middle class, why did it seem like the proles lived better lives than the party members? Winston couldn&rsquo;t even afford pajamas.</li>
-<li>It seems like Winston had been watched for 7 whole years before the thought police was able to get him. Did his wife actually inform the Party about him?</li>
-<li>Why did Winston hate rats so much? Part of me wonders whether he actually had previously been in Room 101 before and this was not the first time he had been tortured and reintroduced into society. That would at least explain why he had this connection with O&rsquo;Brien.</li>
-</ol>
+<li dir="ltr">
+<p dir="ltr"><span>She knew so much about Winston from the beginning (e.g. his name, the perfume her mom used, the chocolate).</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>She asked him to read The Book aloud instead of reading it with him. It&rsquo;s as if she wanted him to be heard by the tv.</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>Speaking of tv, it&rsquo;s suspicious that she actually pointed out the picture frame that was hiding the telescreen. &ldquo;I bet that picture&rsquo;s got bugs behind it.&rdquo;</span></p>
+</li>
+<li dir="ltr">
+<p dir="ltr"><span>O&rsquo;Brien claimed Julia betrayed him almost immediately. But when he talks to her at the end of the book she mentions going to Room 101. Weren&rsquo;t there 3 stages involved in reprogramming and torture was the last one?</span></p>
+</li>
+</ol></ol>
 
 </article>
 
