--- a/notes/hhgtg.html
+++ b/notes/hhgtg.html
@@ -42,10 +42,31 @@ The Hitchhiker's Guide to the Galaxy: A Satirical Spin on Sci-Fi
   </h1>
 </div>
 <article style="margin-top: 30px;">
-<p>I just finished reading "The Hitchhiker's Guide to the Galaxy" and thought it was a fun and enjoyable read. I had trouble getting into the story at first because I didn't realize it was a satire on the sci-fi genre. But once I understood that, I found it much more enjoyable. If you&rsquo;re looking for a deep read or traditional sci-fi, this isn&rsquo;t it. But it is a great choice for a laugh or two.</p>
-<p>The story is about a guy named Arthur Dent who gets swept up on a wild adventure through space with his friend Ford Prefect. It's kind of like a space-travel version of <em>Alice in Wonderland</em> and borrows elements from other popular sci-fi stories. For example, there&rsquo;s a depressed robot named Marvin that is a parody of C3PO from Star Wars. Even "The Guide" itself is a gag on the "Encyclopedia Galactica" from the Foundation series by Isaac Asimov.</p>
-<p>Despite it being a fun story, I think it&rsquo;s a bit overhyped. It&rsquo;s got a cult following and often recommended as a must-read, but I don&rsquo;t think it lives up to the hype. It&rsquo;s the type of book you pick up just for fun, probably as a teenager. The characters are likable, there&rsquo;s a few plot twists, and it&rsquo;s got some clever jokes. But it doesn&rsquo;t have a lot of depth or a strong plot.</p>
-<h2>Fun quotes from the story</h2>
+<p>The Hitchhiker's Guide to the Galaxy is a lighthearted and witty novel by Douglas Adams that parodies the science fiction genre. With its unique blend of humor, adventure, and memorable characters, the novel offers readers an entertaining journey through the universe that is both amusing and thought-provoking. However, it may not be the right choice for those seeking depth or traditional sci-fi elements.</p>
+<p>The story follows Arthur Dent, an ordinary man who embarks on a wild adventure through space with his friend Ford Prefect. As they travel through the cosmos, they encounter a diverse cast of characters and navigate a series of bizarre and hilarious situations. The novel is filled with witty dialogues, clever jokes, and amusing plot twists, all of which contribute to its overall charm.</p>
+<h2><strong>Characters</strong></h2>
+<ul>
+<li><strong>Arthur Dent:</strong> The protagonist, Arthur is a rather ordinary human who is thrust into a chaotic and absurd universe. He is often baffled by the strange events that unfold around him but learns to adapt and find humor in his newfound circumstances.</li>
+<li><strong>Ford Prefect:</strong> Arthur's best friend, Ford is an alien who has been living on Earth for several years. He is knowledgeable about the universe and often provides guidance to Arthur as they journey through space.</li>
+<li><strong>Zaphod Beeblebrox:</strong> The eccentric, two-headed, and somewhat narcissistic former Galactic President. He is on a quest to find the legendary planet Magrathea and is responsible for stealing the Heart of Gold spaceship.</li>
+<li><strong>Trillian:</strong> The only other human survivor besides Arthur, Trillian, is an intelligent and resourceful woman who accompanies Zaphod on his quest.</li>
+<li><strong>Marvin:</strong> A depressed robot with a "brain the size of a planet," Marvin often provides comic relief with his pessimistic outlook on life and dry sense of humor.</li>
+</ul>
+<h2><strong>Key Takeaways</strong></h2>
+<ul>
+<li>The importance of enjoying life and finding humor in the absurdity of the universe.</li>
+<li>Adapting to change and embracing the unexpected can lead to personal growth.</li>
+<li>Taking oneself too seriously leads nowhere.</li>
+</ul>
+<h2><strong>Personal Reflection</strong></h2>
+<p>I struggled to connect with the story at first because I didn&rsquo;t realize it was a satire on the sci-fi genre. However, once I caught on, I came to appreciate the humor and found the story much more engaging. The witty dialogue, clever jokes, and amusing plot twists all make the story pretty entertaining, and I can see the appeal and why the book has a cult following. It has a distinct blend of humor and adventure, and makes fun of the more bureaucratic and mundane aspects of regular life.</p>
+<p>It&rsquo;s worth noting that the author borrows elements from other popular sci-fi stories to create its plot and characters, which adds depth to the novel's themes.</p>
+<p>For example, Marvin, the depressed robot, serves as a commentary on the search for meaning and the insignificance of human concerns in the vast universe. As a parody of C3PO from the Star Wars franchise, Marvin's pessimistic and often comically unhelpful nature contrasts with C3PO's helpful and optimistic demeanor. Even "The Guide" itself is a play on the "Encyclopedia Galactica" from Isaac Asimov's Foundation series.</p>
+<p>While I appreciated the humor and entertainment value, I couldn't help but feel that it lacked depth and a strong plot. The story seemed to stumble through various adventures without a clear goal or overarching theme, which made it difficult for me to become fully invested in the characters. Nonetheless, I found the novel to be an enjoyable read that provided an amusing break from more serious literature.</p>
+<h2><strong>Recommendation</strong></h2>
+<p>If you&rsquo;re looking for a fun, light, and engaging read then The Hitchhiker's Guide to the Galaxy is a pretty good option. It&rsquo;s witty and features all of the core elements of a space opera without the seriousness of Star Wars or The Foundation series. However, if you&rsquo;re looking for a strong plot or a more traditional sci-fi experience, this isn&rsquo;t the right book for you.</p>
+<p>That being said, if you approach the book with an open mind and an appreciation for its satirical nature, the story has a lot to offer.</p>
+<h2><strong>Fun quotes from the story</strong></h2>
 <ul>
 <li>&ldquo;I'd far rather be happy than right any day.&rdquo;</li>
 <li>&ldquo;Isn't it enough to see that a garden is beautiful without having to believe that there are fairies at the bottom of it too?&rdquo;</li>
