--- a/notes/hhgtg.html
+++ b/notes/hhgtg.html
@@ -44,7 +44,7 @@ Book Review: The Hitchhiker's Guide to the Galaxy by Douglas Adams
     <small class="grid eight description">
       A Satirical Adventure Through the Cosmos
     </small>
-  
+  </div>  
 </div>
 <article style="margin-top: 30px;">
 <p>The Hitchhiker's Guide to the Galaxy is a lighthearted and witty novel by Douglas Adams that parodies the science fiction genre. With its unique blend of humor, adventure, and memorable characters, the novel offers readers an entertaining journey through the universe that is both amusing and thought-provoking. However, it may not be the right choice for those seeking depth or traditional sci-fi elements.</p>
