--- a/notes/brave-new-world.html
+++ b/notes/brave-new-world.html
@@ -38,26 +38,50 @@
     Notes
   </small>
   <h1 class="title">
-A Brave New World: A Dystopian Vision of Utopia
+Book Review: Brave New World by Aldous Huxley
   </h1>
+  <div class="container">
+    <small class="grid eight description">
+      A Dystopian Vision of Utopia, with drugs?
+    </small>
+  </div>   
 </div>
 <article style="margin-top: 30px;">
 
-<p>In A Brave New World, Aldous Huxley paints a vivid picture of a dystopian society where pleasure and conformity reign supreme. The novel is set in a future society where the government has complete control over its citizens through science and technology. Reproduction is controlled and individuals are conditioned to accept their predetermined roles in society.</p>
-<p>The story follows the character of Bernard Marx, who is an outsider in the society and is unhappy with the way things are. He begins to question the values of the society, but gives up on that in the end.</p>
-<p>I read this book just a few weeks after reading 1984, and this was like a gentle breeze compared to a stormy gale of Orwell&rsquo;s 1984. In hindsight, reading them so close together made it harder to fully appreciate A Brave New World as one of the pioneering classics in dystopian literature.</p>
-<p>Like many other books of this genre from the early 20th century, the novel explores the dangers of totalitarian government. But whereas 1984 delves into the darker aspects of communism and socialism through a surveillance state, A Brave New World explores the darker side of technology and consumerism.</p>
-<p>A huge difference between the two is that in 1984, the characters are aware of the control imposed upon them, and some even resented it enough to rebel and plot against the government. But in A Brave New World, the citizens have been taught to optimize for maximum happiness rather than loyalty to the government, making it difficult for them to rebel, as they believe they already have what they want.</p>
-<p>I guess it&rsquo;s easy to rise against oppression when you&rsquo;re deprived of searching for true happiness. But if you believe you&rsquo;ve already found it, what is there to rebel against but rebellion itself?</p>
-<p>One of the most striking aspects of the novel is the elimination of the traditional family structure. The government claims that it allows for the needs of the collective to be met without the distractions of individual and kin. Even the idea of motherhood is looked down upon, seen as a shameful and repugnant thing.</p>
-<p>Family plays a critical role in shaping our values and our very selves. With the absence of family and social bonds, how else would the society have values without programming? Regardless, I think one of the shortcomings of the novel is it brings all of this up, yet doesn't even fully explore the consequences of the lack of family ties.</p>
-<p>Another striking aspect was the problematic portrayal of women and minorities. The women in the novel are portrayed as shallow pleasure seekers, such as the character of Lenina Crowne who is unable to think for herself, only thinks about getting high and having sex, and is fully indoctrinated in the values of the society. The non-white characters are depicted as primitive and inferior.</p>
-<p>Most of the book centers around the different methods the government employs to control society, which includes eliminating the family structure, programming children through classical and operant conditioning, exiling citizens that exhibit too much individuality, limiting access to information, and discouraging emotional bonds between citizens.</p>
-<p>Truth be told, I don&rsquo;t think I liked the book that much. I found the ending unsatisfying and thought the characters were not well developed. They're mostly just vehicles for the author to explore his ideas and themes.</p>
-<p>Nonetheless, it was still an interesting read. It made me wonder about some pretty deep questions: is it better to be happy or to be free? Does freedom lose its allure if it comes at the cost of a life of joy? Is it worth being happy if you are deprived of free will?</p>
-<p>But I guess if a book makes you think that deeply, it cannot be all that bad.</p>
-<h2>Interesting quotes from the book</h2>
-<ol>
+<blockquote>
+<p>"Power is not a means, it is an end." - George Orwell, 1984</p>
+</blockquote>
+<p>In Brave New World, Aldous Huxley transports us to a dystopian society where pleasure and conformity are the ultimate goals, and thinking too much is strictly optional. Citizens are conditioned from birth to embrace their cookie-cutter roles, and the government's got reproduction down to a science - literally.</p>
+<p>The novel is set in a world where science and technology have turned reproduction into a carefully controlled assembly line process. Gone are the days of messy emotions and pesky family ties; in their place, we have a society of individuals who are pre-programmed to fit neatly into their predetermined roles. Who needs personal growth or hustle culture when you can have an endless supply of distractions and designer drugs to keep your mind blissfully occupied?</p>
+<p>In this world, instant gratification is the only thing on the menu, and everyone's too busy chasing happiness to realize they might be missing out on something more meaningful.</p>
+<p>The story revolves around Bernard Marx, an outsider who dares to question the status quo in a world that seems utterly alien, yet eerily familiar. While the citizens of this &ldquo;brave new world&rdquo; are convinced they've got it all figured out, it's hard not to wonder what they might be missing out on in their relentless pursuit of superficial pleasures.</p>
+<p>Amidst the sea of happiness-obsessed individuals, we're left to think about the true cost of a society that prioritizes conformity and instant gratification above all else. Huxley's satirical take on a dystopian future leaves us with a lingering question: Is it better to live an awesome life of manufactured happiness, or to confront the messiness of the human experience in pursuit of a deeper, more authentic existence?</p>
+<h2><strong>Characters</strong></h2>
+<ul>
+<li><strong>Bernard Marx:</strong> The protagonist, an outsider who questions the values of society and seeks to find meaning in life beyond pleasure and conformity.</li>
+<li><strong>Lenina Crowne:</strong> A woman who embodies the values of the society, seeking pleasure and happiness without questioning the consequences.</li>
+<li><strong>Mustapha Mond:</strong> The World Controller of Western Europe, who understands the workings of the society and defends its principles.</li>
+<li><strong>John the Savage:</strong> A man raised outside the confines of the World State, who becomes a symbol of rebellion and individuality.</li>
+<li><strong>Helmholtz Watson:</strong> A friend of Bernard's, who also feels disconnected from society and yearns for something more meaningful.</li>
+</ul>
+<h2><strong>Key Takeaways</strong></h2>
+<ul>
+<li>The importance of enjoying life and finding humor in the absurdity of the universe.</li>
+<li>Adapting to change and embracing the unexpected can lead to personal growth.</li>
+<li>Taking oneself too seriously leads nowhere.</li>
+</ul>
+<h2><strong>Personal Reflection</strong></h2>
+<p>I felt a mix of amusement and disquiet about this book. It's true that Huxley's vision of a pleasure-driven society felt eerily prophetic at times, but it also possessed a bizarre charm that kept me turning the pages, almost guiltily enjoying the absurdity of it all.</p>
+<p>Reading it shortly after Orwell's 1984, it was hard not to compare the two dystopian heavyweights. While 1984 was like being smacked in the face by the iron fist of totalitarianism, Brave New World felt like a sly wink from a hedonistic utopia gone awry. It's as if Huxley decided to take humanity's pursuit of happiness and push it to its most absurd extreme, leaving us to wonder if it's all just a cruel joke.</p>
+<p>The characters, though not as fleshed out as I would have liked, served as interesting lenses through which to examine this world. Bernard Marx, the brooding misfit, provided a refreshing contrast to the blissed-out masses, while Lenina Crowne's unapologetic hedonism reminded us just how intoxicating it could be to live in a world where one's every desire is met without consequence.</p>
+<p>However, I couldn't help but feel a twinge of discomfort at the book's problematic portrayal of women and minorities. It's clear that Huxley was a product of his time, but it's important to acknowledge the dated stereotypes that spoil an otherwise interesting exploration of societal control and human nature.</p>
+<p>In the end, I'd say Brave New World was a solid 5 out of 10 for me. While it certainly provided food for thought and more than a few laughs, it lacked the depth that would have made it a truly good read. Nonetheless, it's a classic that's worth a read if you're in the mood for some slightly dark, satirical entertainment.</p>
+<h2><strong>Recommendation</strong></h2>
+<p>Brave New World is a bit of a mixed bag. The characters are not well-developed, and the ending is unsatisfying. If you're expecting a deeply emotional experience or well-rounded characters that'll tug at your heartstrings, you might want to look elsewhere.</p>
+<p>But if you're looking for a thought-provoking and satirical trip through a dystopian society that'll make you chuckle, then by all means, give it a go. It's an important classic that remains relevant in our world of technology and consumerism.</p>
+<p>Just don't blame me if you find yourself contemplating the true nature of happiness and freedom at 3 in the morning (lol). You've been warned.</p>
+<h2>Interesting <strong>quotes from the story</strong></h2>
+<ul>
 <li>"Words can be like X-rays if you use them properly -- they'll go through anything. You read and you're pierced."</li>
 <li>&ldquo;Actual happiness always looks pretty squalid in comparison with the overcompensations for misery.&rdquo;</li>
 <li>&ldquo;If one's different, one's bound to be lonely.&rdquo;</li>
@@ -68,7 +92,7 @@ A Brave New World: A Dystopian Vision of Utopia
 <li>&ldquo;When people are suspicious with you, you start being suspicious with them.&rdquo;</li>
 <li>&ldquo;That is the secret of happiness and virtue -- liking what you've got to do.&rdquo;</li>
 <li>&ldquo;The greater a man's talents, the greater his power to lead astray.&rdquo;</li>
-</ol>
+</ul>
   
 </article>
 
