--- a/notes/the-stranger.html
+++ b/notes/the-stranger.html
@@ -38,27 +38,59 @@
     Notes
   </small>
   <h1 class="title">
-The Stranger: Challenging the Absurdity of Life
+    Book Review: The Stranger by Albert Camus**
   </h1>
+  <div class="container">
+    <small class="grid eight description">
+      A Nihilistic Ride with a Side of Absurdity
+    </small>
+  </div>     
 </div>
 <article style="margin-top: 30px;">
 
-<p>The Stranger by Camus delves into the nature of existentialism and the human condition. The story follows Meursault, a detached and apathetic protagonist, as he navigates through a series of events that ultimately lead to his trial and execution for murder.</p>
-<p>I found myself becoming increasingly frustrated with Meursault. While I understood the reason for his detachment and apathy, I still found it so annoying and it made it difficult for me to connect with him as a character.</p>
-<p>Also he seems quite clueless. For example, he seems to be under the impression that he and his mother had an understanding and that she did not hold any ill feelings toward him for putting her in a home. Yet, the caretaker seems to disprove that by noting that Meursault&rsquo;s mother had expressed anger and sadness about being in the home.</p>
-<p>Above all else, I think his passivity was the characteristic about Meursault that I found most frustrating. Instead of speaking up for himself and explaining the circumstances that led to the killing, Meursault allows the prosecution to define him and his actions. Instead of telling the judge that the Arab had cut his friend and threatened him with a knife, he gives flimsy excuse about the sun being too bright. Why?! This passivity ultimately leads to his conviction and death sentence.</p>
+<blockquote>
+<p>"Life can only be understood backwards; but it must be lived forwards." - S&oslash;ren Kierkegaard</p>
+</blockquote>
+<p>The Stranger by Albert Camus is a riveting dive into existentialism and the absurdity of the human condition. The protagonist, Meursault, is a detached, apathetic guy who stumbles through life with all the grace of a sleepwalker. His journey takes him from the death of his mother to a series of unfortunate events that culminate in his trial and execution for murder.</p>
+<p>Reading Meursault's thoughts is like watching a nature documentary on the human psyche; fascinating but also a bit unsettling. You may find yourself torn between understanding the reasons for his detachment and wanting to shake some sense into him. After all, who wouldn't want to yell, "Snap out of it, man!" at a character who seems utterly clueless about his own emotions and those of others?</p>
+<p>But yet, I kind of think Meursault's passivity is infuriatingly brilliant? He allows the world to label him as they please, never bothering to stand up for himself or clarify his actions. It's as if he decided to take on the mantle of humanity's punching bag, all for the sake of demonstrating the absurdity of life. And yet, it's hard not to wonder if a more assertive Meursault might have made a better case for himself in court.</p>
+<p>In the end, our apathetic protagonist is forced to face the music, confronting his emotional vacuum when it comes to his mother's death and his own impending demise. It's a poetic and poignant moment that offers a glimmer of remorse and regret in an otherwise bleak landscape.</p>
+<h2><strong>Characters</strong></h2>
+<ul>
+<li><strong>Meursault:</strong> The detached, apathetic protagonist. He navigates life in a constant state of meh.</li>
+<li><strong>Raymond Sint&egrave;s:</strong> Meursault's unsavory neighbor. Dude is kind of sketch, tbh.</li>
+<li><strong>Marie Cardona:</strong> Meursault's love interest, the only ray of sunshine in his sad existence.</li>
+<li><strong>The Arab:</strong> The man Meursault kills. The catalyst for the protagonist's downfall.</li>
+<li><strong>Thomas P&eacute;rez:</strong> An old man who loved Meursault's mother. He was kind of useless.</li>
+<li><strong>The Magistrate:</strong> The representative of the justice system that wants to unravel the enigma that is Meursault.</li>
+</ul>
+<h2><strong>Key Takeaways</strong></h2>
+<ul>
+<li>Apathy and detachment can be both a shield and a weakness.</li>
+<li>Freedom comes with a price, and sometimes that price is too steep to pay.</li>
+<li>Confronting the absurdity of life can be a humbling experience.</li>
+<li>Sometimes, personal growth can only happen when we're forced to face the music.</li>
+</ul>
+<h2><strong>Personal Reflection</strong></h2>
+<p>Camus has a knack for provoking the reader, making us question our own beliefs and values. And as much as I wanted to be that cool, detached observer, I couldn't help but feel a bit rattled by Meursault's apathy. It's like watching someone poke a sleeping bear and then shrug nonchalantly when the bear finally wakes up &ndash; you know it's not going to end well.</p>
 <p>I know the detachment is a central theme of the novel and is used to explore the idea of the absurd, which is a key concept in Camus's philosophy. The absurd is the idea that life has no inherent meaning, and that individuals must create their own purpose. But Meursault's detachment is such a hyperbolic representation of this idea!</p>
 <p>Another important theme in the book is the concept of freedom. Meursault is a character who is not constrained by societal norms and expectations, and he acts according to his own desires and impulses. But his freedom is both a blessing and a curse. He lives a life that&rsquo;s true to himself, but also leads to his downfall.</p>
 <p>This is perhaps the more interesting part of the novel for me, as it raised an important question about the relationship between freedom and responsibility. Can true freedom exist without consequences?</p>
-<p>In the end, Meursault is confronted with his impending execution and is forced to confront his lack of emotions towards his mother's death, and his failure to fully understand the nature of their relationship. This realization brings him a sense of remorse and regret. It&rsquo;s poetic that it took the loss of his own life for him to appreciate the value, and meaning, of living.</p>
-<p>Overall, I found The Stranger was a thought-provoking and powerful novel. In his simple and straightforward writing style, Camus masterfully explores the nature of existence, freedom, and the meaning of life. His writing alone makes this book a must read. I plan to read it again in my 40s to see if I still see the world, and Meursault, in the same way.</p>
-<h2>Memorable quotes</h2>
+<h2><strong>Recommendation</strong></h2>
+<p>Camus's exploration of freedom is both intriguing and somewhat tragic. Meursault is not bound by societal norms or expectations, but his unfettered lifestyle leads to his undoing. This begs the question: can one truly be free without facing consequences?</p>
+<p>If you're up for a wild existential ride, then buckle up, because The Stranger is definitely worth your time. Camus's storytelling captivates you from the start, and his exploration of human nature is both thought-provoking and disturbing. It's not a light read, but it's the kind of book that leaves a lasting impression. Give it a go, and let it mess with your mind.</p>
+<p>Who knows, you might even find yourself revisiting it later in life to see if your perspective on Meursault and the world has changed.</p>
+<h2>Interesting <strong>quotes from the story</strong></h2>
 <ul>
 <li>"I opened myself to the gentle indifference of the world.&rdquo;</li>
 <li>"Everything I had said, everything I had done, suddenly became meaningless. All that remained was the evidence of a senseless crime.&rdquo;</li>
 <li>"I felt as if I had been awakened from a long sleep, a sleep full of dreams, but this morning I was coming back to reason.&rdquo;</li>
 <li>"I looked at the sea, at the sky, at the clouds, and I felt that I was going to die for the first time.&rdquo;</li>
 <li>"The sun was coming up and the sky was turning red. I had the strange feeling that I'd been happy and that I was happy again.&rdquo;</li>
+<li>"I may not have been sure about what really did interest me, but I was absolutely sure about what didn't."</li>
+<li>"Since we're all going to die, it's obvious that when and how don't matter."</li>
+<li>"Every man alive was privileged; there was only one class of men, the privileged class."</li>
+<li>"I felt that I had been happy and that I was happy again."</li>
 </ul>
   
 </article>
